src/avm2/tests/regress/correctness/pass/reg-2.as
(function () {
  trace("--- Test 0 ---");
  var s : String = "";
  s.match(new RegExp("shadows=true"));
})();

