src/avm2/tests/regress/correctness/fail/delete-0.as
import flash.utils.Dictionary;
import flash.utils.Dictionary;

(function () {
  trace("--- Test 0 ---");
  trace(String);
  trace(String.prototype.charAt);
  trace(delete String.prototype);
})();

trace("--- DONE ---");